--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http://wittawin381.github.io/gpage",
+  "homepage":"http://wittawin381.github.io/ghpages",
   "name": "gpage",
   "version": "0.1.0",
   "private": true,
